# SPINNER

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  render.yaml  vercel.json
api/: analyze.py
src/spinner/: __init__.py  webapp.py
src/spinner/web/: app.js  index.html  styles.css
tests/: test_webapp.py
